@startuml

title __COMMUNICATION's Class Diagram__\n

  namespace  {
    namespace ommunication {
      class communication.CommicationController {
          ~ objectInputStream : ObjectInputStream
          ~ objectOutputStream : ObjectOutputStream
          - PORT : int
          - clientSocket : Socket
          + CommicationController()
          + run()
          - closeConnection()
          - readMessageFromClient()
          - sendToClient()
      }
    }
  }
  

  namespace  {
    namespace ommunication {
      class communication.CommunicationReceiving {
          + run()
      }
    }
  }
  

  namespace  {
    namespace ommunication {
      class communication.CommunicationSending {
          + run()
      }
    }
  }
  

  communication.CommicationController .up.|> java.lang.Runnable
  communication.CommicationController o-- authentication.ServerAuthenticator : authenticator
  communication.CommicationController o-- message.Message : clientMessage
  communication.CommunicationReceiving .up.|> java.lang.Runnable
  communication.CommunicationSending .up.|> java.lang.Runnable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
